# knn

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  dist.h  rand.h  serialize.cpp  serialize.h
datagen/: CMakeLists.txt  main.cpp
knn/: CMakeLists.txt  dist.h  knn.cu  knn.cuh  knn.h
proto/: CMakeLists.txt  data.proto
test/: CMakeLists.txt  main.cu
